syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message PutUserRequest {
  string email = 1;
  string password = 2;
}

message PutUserResponse {
  User user = 1;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  User user = 1;
}

message GetUserRequest {
  string email = 1;
}

message GetUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string email = 1;
}

message DeleteUserResponse {
  User user = 1;
}

service UserService {
  rpc PutUser(PutUserRequest) returns (PutUserResponse) {}
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}
